# django-simple-components

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  MANIMEST.in  README.md  manage.py  pyproject.toml
.github/workflows/: release.yml  tests.yml
example/: .gitignore  README.md  example.db.json  requirements.txt
example/blog/: admin.py  models.py  urls.py  views.py
example/blog/migrations/: 0001_initial.py
example/blog/templates/blog/: home.html  post.html  posts.html
example/config/: settings.py  urls.py
example/templates/: _footer.html  _header.html  base.html
simple_components/: apps.py  exceptions.py
simple_components/templates/simple_components/: base.html  example.html  slots.html
simple_components/templatetags/: simple_components.py
tests/: settings.py  tests.py
tests/templates/: children.html  context.html  newlines.html  raise_component_args.html  raise_component_name.html  raise_component_name_required.html  raise_component_not_found.html  raise_component_props.html  raise_component_props_children.html  raise_set_component_name.html  raise_set_component_name_required.html  raise_set_slot_name_required.html  raise_slot_name_required.html  raise_slot_not_found.html  setup.html  slot.html  slot_fallback.html  slots.html  strings.html
