[build-system]
requires = [
    "setuptools>=61.0",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-simple-components"
dynamic = ["version"]
authors = [
  { name="Pavel Kutsenko", email="zebartcoc@gmail.com" },
]
description = "A small package to easily create components inside your templates without saving them in the templates folder."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
"Homepage" = "https://github.com/paqstd-dev/django-simple-components"
"Bug Tracker" = "https://github.com/paqstd-dev/django-simple-components/issues"


[tool.setuptools_scm]

[tool.coverage.run]
omit = [
    "manage.py",
    "setup.py",
    "tests/*"
]

[tool.black]
line-length = 88
target-version = ["py311"]
include = "\\.pyi?$"
skip-string-normalization=true

[tool.isort]
profile = "django"
combine_as_imports = true
include_trailing_comma = true
line_length = 88
multi_line_output = 3
known_first_party = ["config"]
